2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/list.cpp :

	  - In the del() function, if deleting a list of items, ignore those
	    that are not in the list.

2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_3_0

	* lib/polbase.cpp :

	  - add_consttab() now accepts non-ground expressions.

	* lib/consttab.cpp :
	* lib/consttab.h :

	  - Removed replace() and varlist() from consttab. Expressions stored
	    in this table should already be grounded.

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Added a vvarlist() function that will verify a fact/expression and
	    at the same time will add any variables encountered into a list.

	  - Original varlist() does not need a varlist **. Now uses varlist *.

	  - verify() functions will now ignore the varlist if it is null.

	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/varlist.cpp :
	* lib/varlist.h :

	  - Added new add() and del() functions that take lists instead of
	    variables and strings.

	  - redefined copy() by using the new vlad_list::add() function.

	* lib/list.h :
	* lib/list.cpp :

	  - Added add() and del() functions in vlad_list. These functions take
	    vlad_list parameters.

	  - Added a default copy() function in vlad_list_item that is used by
	    the above add() function to duplicate the item. This copy()
	    function, of course, should be overridden by any child class that
	    uses the above add() function.

2005-12-12  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :

	  - Removed -Wstrict-prototypes from CXXFLAGS.

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Added a vreplace() function to replace and verify.

	  - Some minor cleanup.

	* lib/symtab.cpp :
	* lib/symtab.h :

	  - Added a function that will give a list of tuples of entities that
	    match a given list of variables for grounding.
